--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -1,7 +1,9 @@
 $primary: blue;
+$plain:white;
 $secondary: gray;
 $warning: yellow;
 $danger: red;
+$formbg:rgba(192,192,192,0.5);
 $width: 250px;
 $height: 220px;
 $padding:20px;
