--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -4,6 +4,7 @@ $secondary: gray;
 $warning: yellow;
 $danger: red;
 $formbg:rgba(192,192,192,0.5);
+$card:rgba(255, 255, 255,0.5);
 $width: 250px;
 $height: 220px;
 $padding:20px;
